<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/manga_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        android:layout_alignParentTop="true"
        android:layout_above="@id/relativeLayout">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/go_to_library_button"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_above="@id/textView_library"
            android:layout_marginLeft="22dp"
            android:background="@drawable/library_image" />

        <TextView
            android:id="@+id/textView_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16.5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/library" />

        <ImageButton
            android:id="@+id/go_to_search_button"
            android:layout_centerInParent="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_above="@id/textview_search"
            android:background="@drawable/search_icon" />

        <TextView
            android:id="@+id/textview_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/search"

            />


        <ImageButton
            android:id="@+id/go_to_favorite"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="25dp"
            android:layout_alignParentRight="true"
            android:layout_above="@id/textview_favorite"
            android:background="@drawable/favorite_image" />

        <TextView
            android:id="@+id/textview_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16.5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/favorite" />

    </RelativeLayout>


</RelativeLayout>