<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Library"
    android:background="#FFFF">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary">


            <EditText
            android:id="@+id/search_bar"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/search_bar_initial"
            android:importantForAutofill="no"
            android:inputType=""
            android:textAlignment="center" />

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/result_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/navigation_bar"
            android:layout_below="@id/header_layout" />

        <RelativeLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/go_to_library_button"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/library_image" />

            <TextView
                android:id="@+id/textView_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16.5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/library" />

            <ImageButton
                android:id="@+id/go_to_search_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:background="@drawable/search_icon" />

            <TextView
                android:id="@+id/textview_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/search"

                />

            <ImageButton
                android:id="@+id/go_to_favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/favorite_image" />

            <TextView
                android:id="@+id/textview_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="20dp"
                android:text="@string/favorite" />


        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>